# Kagi-Session2API-MCP

./: .gitignore  README.md  README_ZH.md  pyproject.toml
.github/workflows/: publish.yml
src/kagi_session_mcp/: __init__.py  client.py  config.py  exceptions.py  formatter.py  parser.py  server.py  summarizer.py  token_pool.py
tests/: test_client.py  test_config.py  test_formatter.py  test_parser.py  test_token_pool.py
