[project]
name = "kagi-session2api-mcp"
version = "0.2.1"
description = "Kagi MCP server using session-based access (no official API required)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "kagi-session-mcp contributors" },
]
keywords = ["kagi", "mcp", "search", "summarizer", "session"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx[http2]>=0.27",
    "h2>=4.0",
    "selectolax>=0.3",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/KSroido/Kagi-Session2API-MCP"
Repository = "https://github.com/KSroido/Kagi-Session2API-MCP"
Issues = "https://github.com/KSroido/Kagi-Session2API-MCP/issues"
Changelog = "https://github.com/KSroido/Kagi-Session2API-MCP/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
kagi-session2api-mcp = "kagi_session_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kagi_session_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a live Kagi session token",
]
